--- a/AndroidApp/app/src/main/res/layout/fragment_menstruation.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_menstruation.xml
@@ -17,6 +17,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="115dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/compr"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,21 +30,15 @@
                 android:padding="16dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/compress"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="8dp"/>
+                    style="@style/TextViewStyleCardView"
+                    android:text="@string/compress" />
 
                 <!-- Agrega más TextViews, ImageView, y enlaces a YouTube según sea necesario -->
 
                 <Button
+                    style="@style/ButtonCardView"
                     android:id="@+id/buttonCompress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/more_info"
-                    android:layout_marginTop="8dp"/>
+                    android:text="@string/more_info"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -46,6 +46,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="115dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/menst"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,19 +61,13 @@
 
                 <!-- Etiqueta para Retrasos -->
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/delays"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="8dp"/>
+                    style="@style/TextViewStyleCardView"
+                    android:text="@string/delays"/>
 
                 <Button
+                    style="@style/ButtonCardView"
                     android:id="@+id/buttonDelays"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/more_info"
-                    android:layout_marginTop="8dp"/>
+                    android:text="@string/more_info"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
