--- a/AndroidApp/app/src/main/res/values/styles.xml
+++ b/AndroidApp/app/src/main/res/values/styles.xml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="TextviewStyle">
-        <item name="android:textColor">@color/colorBackgroundCardView</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">20dp</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:letterSpacing">0.1</item>
+    <!-- res/values/styles.xml -->
+
+    <style name="CardViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="cardBackgroundColor">@color/black</item>
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">4dp</item>
+        <item name="cardUseCompatPadding">true</item>
+        <!-- Otros atributos de estilo comunes para CardView -->
     </style>
+
+
+    <style name="TextViewStyleCardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@android:color/darker_gray</item>
+        <!-- Otros atributos de estilo según tus preferencias -->
+    </style>
+
+    <style name="ImageViewCardView">
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="ButtonCardView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="ButtonFirst">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
 </resources>
